Замена файлов на новые

--- a/Анализ стоимости квартир с сайта List.am/Step 1 Парсинг Selenium.ipynb
+++ b/Анализ стоимости квартир с сайта List.am/Step 1 Парсинг Selenium.ipynb
@@ -3,23 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "12076246",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#from selenium import webdriver\n",
-    "#from selenium.webdriver import Chrome\n",
-    "# from selenium.webdriver.common.keys import Keys\n",
-    "# from selenium.webdriver.support.ui import WebDriverWait as wait\n",
-    "# from selenium.webdriver.support import expected_conditions as EC\n",
-    "# from selenium.common.exceptions import NoSuchElementException\n",
-    "# from selenium.webdriver.common.by import By\n",
-    "#from tqdm import tqdm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "id": "5d28b1e3",
    "metadata": {},
    "outputs": [],
@@ -35,17 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "65d76297",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#browser = webdriver.Chrome()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "985cece9",
    "metadata": {},
    "outputs": [
@@ -54,59 +27,6 @@
      "output_type": "stream",
      "text": [
       "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "27\n",
-      "28\n",
-      "Исключение было обработано\n",
-      "29\n",
-      "30\n",
-      "31\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "35\n",
-      "36\n",
-      "37\n",
-      "38\n",
-      "39\n",
-      "40\n",
-      "41\n",
-      "42\n",
-      "43\n",
-      "44\n",
-      "45\n",
-      "46\n",
-      "47\n",
-      "48\n",
-      "Исключение было обработано\n",
-      "49\n",
-      "Исключение было обработано\n",
-      "Исключение было обработано\n",
-      "50\n",
       "Исключение было обработано\n",
       "THE END\n"
      ]
@@ -115,7 +35,7 @@
    "source": [
     "data=[]                                                    # создаём пустой список, в который будут собираться объявления\n",
     "\n",
-    "for i in range(1, 51):                                     # задаем цикл с номерами страниц для загрузки\n",
+    "for i in range(1, 2):                                     # задаем цикл с номерами страниц для загрузки\n",
     "    browser = webdriver.Chrome()\n",
     "    print(i)                                               # выводим на печать номер обрабатываемой страницы\n",
     "    url = f'https://www.list.am/ru/category/56/{i}?type=1&n=1&_a39=2&_a3_1=60&_a3_2=100' # задаем url\n",
@@ -157,25 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "08f938ca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# browser.find_element(By.CSS_SELECTOR, \".dlf>a\").click()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b5b34f53",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "2cdd3be2",
    "metadata": {},
    "outputs": [],
@@ -187,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "140e72a6",
    "metadata": {},
    "outputs": [],
@@ -197,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "f1451c6a",
    "metadata": {},
    "outputs": [
@@ -235,189 +137,52 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>18736872</td>\n",
+       "      <td>20597918</td>\n",
        "      <td>Кентрон</td>\n",
-       "      <td>280000</td>\n",
+       "      <td>468000</td>\n",
        "      <td>֏</td>\n",
        "      <td>2</td>\n",
        "      <td>60</td>\n",
-       "      <td>280,000 ֏ в месяц, Кентрон, 2 ком., 60 кв.м., ...</td>\n",
-       "      <td>https://www.list.am/ru/item/18736872</td>\n",
+       "      <td>$1,200 в месяц, Кентрон, 2 ком., 60 кв.м., 9/1...</td>\n",
+       "      <td>https://www.list.am/ru/item/20597918</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>19502269</td>\n",
-       "      <td>Кентрон</td>\n",
-       "      <td>360000</td>\n",
-       "      <td>֏</td>\n",
-       "      <td>2</td>\n",
-       "      <td>95</td>\n",
-       "      <td>360,000 ֏ в месяц, Кентрон, 2 ком., 95 кв.м., ...</td>\n",
-       "      <td>https://www.list.am/ru/item/19502269</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>21503687</td>\n",
-       "      <td>Кентрон</td>\n",
-       "      <td>585000</td>\n",
-       "      <td>֏</td>\n",
-       "      <td>2</td>\n",
-       "      <td>70</td>\n",
-       "      <td>$1,500 в месяц, Кентрон, 2 ком., 70 кв.м., 5/5...</td>\n",
-       "      <td>https://www.list.am/ru/item/21503687</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>19403448</td>\n",
+       "      <td>15229365</td>\n",
        "      <td>Арабкир</td>\n",
-       "      <td>385000</td>\n",
-       "      <td>֏</td>\n",
-       "      <td>2</td>\n",
-       "      <td>100</td>\n",
-       "      <td>385,000 ֏ в месяц, Арабкир, 2 ком., 100 кв.м.,...</td>\n",
-       "      <td>https://www.list.am/ru/item/19403448</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>20070328</td>\n",
-       "      <td>Канакер</td>\n",
-       "      <td>350000</td>\n",
-       "      <td>֏</td>\n",
-       "      <td>3</td>\n",
-       "      <td>70</td>\n",
-       "      <td>350,000 ֏ в месяц, Зейтун Канакер, 3 ком., 70 ...</td>\n",
-       "      <td>https://www.list.am/ru/item/20070328</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4790</th>\n",
-       "      <td>16198939</td>\n",
-       "      <td>Кентрон</td>\n",
-       "      <td>390000</td>\n",
-       "      <td>֏</td>\n",
-       "      <td>2</td>\n",
-       "      <td>65</td>\n",
-       "      <td>$1,000 в месяц, Кентрон, 2 ком., 65 кв.м., 5/5...</td>\n",
-       "      <td>https://www.list.am/ru/item/16198939</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4791</th>\n",
-       "      <td>16881964</td>\n",
-       "      <td>Кентрон</td>\n",
-       "      <td>468000</td>\n",
-       "      <td>֏</td>\n",
-       "      <td>3</td>\n",
-       "      <td>80</td>\n",
-       "      <td>$1,200 в месяц, Кентрон, 3 ком., 80 кв.м., 9/1...</td>\n",
-       "      <td>https://www.list.am/ru/item/16881964</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4792</th>\n",
-       "      <td>16136164</td>\n",
-       "      <td>Кентрон</td>\n",
-       "      <td>546000</td>\n",
-       "      <td>֏</td>\n",
-       "      <td>3</td>\n",
-       "      <td>100</td>\n",
-       "      <td>$1,400 в месяц, Кентрон, 3 ком., 100 кв.м., 10...</td>\n",
-       "      <td>https://www.list.am/ru/item/16136164</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4793</th>\n",
-       "      <td>17342111</td>\n",
-       "      <td>Кентрон</td>\n",
-       "      <td>650000</td>\n",
-       "      <td>֏</td>\n",
-       "      <td>3</td>\n",
-       "      <td>78</td>\n",
-       "      <td>650,000 ֏ в месяц, Кентрон, 3 ком., 78 кв.м., ...</td>\n",
-       "      <td>https://www.list.am/ru/item/17342111</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4794</th>\n",
-       "      <td>16107094</td>\n",
-       "      <td>Кентрон</td>\n",
        "      <td>468000</td>\n",
        "      <td>֏</td>\n",
        "      <td>3</td>\n",
        "      <td>100</td>\n",
-       "      <td>$1,200 в месяц, Кентрон, 3 ком., 100 кв.м., 7/...</td>\n",
-       "      <td>https://www.list.am/ru/item/16107094</td>\n",
+       "      <td>$1,200 в месяц, Арабкир, 3 ком., 100 кв.м., 4/...</td>\n",
+       "      <td>https://www.list.am/ru/item/15229365</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4789 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        number   region    cost value  rooms  square  \\\n",
-       "0     18736872  Кентрон  280000     ֏      2      60   \n",
-       "1     19502269  Кентрон  360000     ֏      2      95   \n",
-       "2     21503687  Кентрон  585000     ֏      2      70   \n",
-       "3     19403448  Арабкир  385000     ֏      2     100   \n",
-       "4     20070328  Канакер  350000     ֏      3      70   \n",
-       "...        ...      ...     ...   ...    ...     ...   \n",
-       "4790  16198939  Кентрон  390000     ֏      2      65   \n",
-       "4791  16881964  Кентрон  468000     ֏      3      80   \n",
-       "4792  16136164  Кентрон  546000     ֏      3     100   \n",
-       "4793  17342111  Кентрон  650000     ֏      3      78   \n",
-       "4794  16107094  Кентрон  468000     ֏      3     100   \n",
+       "     number   region    cost value  rooms  square  \\\n",
+       "0  20597918  Кентрон  468000     ֏      2      60   \n",
+       "1  15229365  Арабкир  468000     ֏      3     100   \n",
        "\n",
-       "                                            information  \\\n",
-       "0     280,000 ֏ в месяц, Кентрон, 2 ком., 60 кв.м., ...   \n",
-       "1     360,000 ֏ в месяц, Кентрон, 2 ком., 95 кв.м., ...   \n",
-       "2     $1,500 в месяц, Кентрон, 2 ком., 70 кв.м., 5/5...   \n",
-       "3     385,000 ֏ в месяц, Арабкир, 2 ком., 100 кв.м.,...   \n",
-       "4     350,000 ֏ в месяц, Зейтун Канакер, 3 ком., 70 ...   \n",
-       "...                                                 ...   \n",
-       "4790  $1,000 в месяц, Кентрон, 2 ком., 65 кв.м., 5/5...   \n",
-       "4791  $1,200 в месяц, Кентрон, 3 ком., 80 кв.м., 9/1...   \n",
-       "4792  $1,400 в месяц, Кентрон, 3 ком., 100 кв.м., 10...   \n",
-       "4793  650,000 ֏ в месяц, Кентрон, 3 ком., 78 кв.м., ...   \n",
-       "4794  $1,200 в месяц, Кентрон, 3 ком., 100 кв.м., 7/...   \n",
+       "                                         information  \\\n",
+       "0  $1,200 в месяц, Кентрон, 2 ком., 60 кв.м., 9/1...   \n",
+       "1  $1,200 в месяц, Арабкир, 3 ком., 100 кв.м., 4/...   \n",
        "\n",
-       "                                      link  \n",
-       "0     https://www.list.am/ru/item/18736872  \n",
-       "1     https://www.list.am/ru/item/19502269  \n",
-       "2     https://www.list.am/ru/item/21503687  \n",
-       "3     https://www.list.am/ru/item/19403448  \n",
-       "4     https://www.list.am/ru/item/20070328  \n",
-       "...                                    ...  \n",
-       "4790  https://www.list.am/ru/item/16198939  \n",
-       "4791  https://www.list.am/ru/item/16881964  \n",
-       "4792  https://www.list.am/ru/item/16136164  \n",
-       "4793  https://www.list.am/ru/item/17342111  \n",
-       "4794  https://www.list.am/ru/item/16107094  \n",
-       "\n",
-       "[4789 rows x 8 columns]"
+       "                                   link  \n",
+       "0  https://www.list.am/ru/item/20597918  \n",
+       "1  https://www.list.am/ru/item/15229365  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "df.head(2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3c1c6542",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
