--- a/Анализ стоимости квартир с сайта List.am/Step 2. Очистка данных.ipynb
+++ b/Анализ стоимости квартир с сайта List.am/Step 2. Очистка данных.ipynb
@@ -1,14 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "5daa3fcf",
-   "metadata": {},
-   "source": [
-    "### ПЕРЕД ЗАПУСКОМ ПОМЕНЯТЬ ДАТЫ В СОХРАНЯЕМОМ ФАЙЛЕ"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "29d62dc1",
@@ -32,22 +24,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "e8ebb9ea",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124mrf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mD:\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mEla\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mflats_Yerevan\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mflats_yerevan\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdate\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, sep\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m;\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;66;03m# Загружаем файл\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m#df.drop(columns=['Unnamed: 0'], inplace=True)                 # удаляем лишнюю колонку с индексом\u001b[39;00m\n\u001b[0;32m      3\u001b[0m df\u001b[38;5;241m.\u001b[39mhead(\u001b[38;5;241m1\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>number</th>\n",
+       "      <th>region</th>\n",
+       "      <th>cost</th>\n",
+       "      <th>value</th>\n",
+       "      <th>rooms</th>\n",
+       "      <th>square</th>\n",
+       "      <th>information</th>\n",
+       "      <th>link</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>18736872</td>\n",
+       "      <td>Кентрон</td>\n",
+       "      <td>280000</td>\n",
+       "      <td>֏</td>\n",
+       "      <td>2</td>\n",
+       "      <td>60</td>\n",
+       "      <td>280,000 ֏ в месяц, Кентрон, 2 ком., 60 кв.м., ...</td>\n",
+       "      <td>https://www.list.am/ru/item/18736872</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     number   region    cost value  rooms  square  \\\n",
+       "0  18736872  Кентрон  280000     ֏      2      60   \n",
+       "\n",
+       "                                         information  \\\n",
+       "0  280,000 ֏ в месяц, Кентрон, 2 ком., 60 кв.м., ...   \n",
+       "\n",
+       "                                   link  \n",
+       "0  https://www.list.am/ru/item/18736872  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
